<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinActivity">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="14dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/join_tv_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/common_join"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/join_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/common_id"
        app:layout_constraintBottom_toTopOf="@id/join_et_input_id"
        app:layout_constraintStart_toStartOf="@id/join_et_input_id" />

    <EditText
        android:id="@+id/join_et_input_id"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="107dp"
        android:background="@drawable/bg_stroke_gray_radius_1dp"
        android:hint="@string/join_request_input_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_tv_join" />

    <TextView
        android:id="@+id/join_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/common_password"
        app:layout_constraintBottom_toTopOf="@id/join_et_input_password"
        app:layout_constraintStart_toStartOf="@id/join_et_input_password" />

    <EditText
        android:id="@+id/join_et_input_password"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_stroke_gray_radius_1dp"
        android:hint="@string/join_request_input_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_et_input_id" />

    <TextView
        android:id="@+id/join_tv_reinput_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/join_reinput_password"
        app:layout_constraintBottom_toTopOf="@id/join_et_reinput_password"
        app:layout_constraintStart_toStartOf="@id/join_et_reinput_password" />

    <EditText
        android:id="@+id/join_et_reinput_password"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_stroke_gray_radius_1dp"
        android:hint="@string/join_requset_reinput_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_et_input_password" />

    <Button
        android:id="@+id/join_bt_join"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/common_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_et_reinput_password" />


</androidx.constraintlayout.widget.ConstraintLayout>