<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="feedbackViewModel"
            type="com.digginroom.digginroom.feature.feedback.FeedbackViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background">

        <ImageView
            android:id="@+id/feedback_iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/common_back_button_description"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/feedback_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/feedback_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feedback_tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:background="@drawable/bg_edittext"
                    android:id="@+id/feedback_et"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="top"
                    android:hint="@string/feedback_hint"
                    android:minHeight="300dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_400"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/feedback_bt_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/feedback_submit"
                    app:layout_constraintEnd_toEndOf="@id/feedback_et"
                    app:layout_constraintStart_toStartOf="@id/feedback_et"
                    app:layout_constraintTop_toBottomOf="@id/feedback_et" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
