<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <import type="com.digginroom.digginroom.feature.room.comment.uistate.state.CommentState" />

        <variable
            name="roomId"
            type="java.lang.Long" />

        <variable
            name="currentComment"
            type="java.lang.String" />

        <variable
            name="postComment"
            type="kotlin.jvm.functions.Function2" />

        <variable
            name="commentViewModel"
            type="com.digginroom.digginroom.feature.room.comment.CommentViewModel" />

        <variable
            name="adapter"
            type="com.digginroom.digginroom.feature.room.comment.adapter.CommentAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/dialog_banner_view"
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_400"
            app:layout_constraintBottom_toTopOf="@+id/text_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/dialog_comment_comment"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/banner_layout_separator"
            app:layout_constraintTop_toBottomOf="@id/dialog_banner_view" />

        <View
            android:id="@+id/banner_layout_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B9B9B9"
            app:layout_constraintBottom_toTopOf="@id/recyclerView_comment"
            app:layout_constraintTop_toBottomOf="@id/text_banner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adapter="@{adapter}"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:visibility="@{((commentViewModel.commentState.state instanceof CommentState.Succeed) &amp;&amp; (((CommentState.Succeed)commentViewModel.commentState.state).comments.size() > 0)) ? View.VISIBLE : View.GONE}"
            app:comments="@{commentViewModel.commentState.state}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/comment_layout_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/banner_layout_separator" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/dialog_comment_empty_comment"
            android:visibility="@{((commentViewModel.commentState.state instanceof CommentState.Succeed) &amp;&amp; (((CommentState.Succeed)commentViewModel.commentState.state).comments.size() > 0)) ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/comment_layout_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/comment_layout_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#B9B9B9"
            app:layout_constraintBottom_toTopOf="@id/editText_comment" />

        <EditText
            android:id="@+id/editText_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="no"
            android:background="@drawable/bg_stroke_gray_radius_1dp"
            android:hint="@string/dialog_comment_input_comment"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@={currentComment}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_send"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/button_send"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackground"
            android:cropToPadding="true"
            android:enabled="@{!TextUtils.isEmpty(currentComment)}"
            android:onClick="@{() -> postComment.invoke(roomId, currentComment)}"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/send_button_selector"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/editText_comment"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
